.k8s/infrastructure/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # Always use https
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # Select ClusterIssuer
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    # Challenger type
    certmanager.k8s.io/acme-challenge-type: http01
    # Reuse same http01 challenge solver
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
spec:
  backend:
    serviceName: nginx
    servicePort: 80
  rules:
    - host: <example.com>
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /
    - host: <www.example.com>
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
        - <example.com>
        - <www.example.com>
      secretName: <example-com-certificate>
